Prevent stretching in FF but allow images to stretch to the full form container
Serving them at higher rez now since there is more stretching.  And at 2X for extra nice retina-ness
#402

--- a/src/sass/form/_image.scss
+++ b/src/sass/form/_image.scss
@@ -8,9 +8,6 @@
 		// Don't break out of box on FF
 		width: 100%;
 
-		// Don't allow images to get crazy big
-		max-height: 400px;
-
 		// Looks better with a lil extra.  I think because of line-height stuff
 		margin-top: 5px + 2px;
 
